# solve-set

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: app.py  requirements.txt
src/set_solver/: extract.py  find.py  identify.py  requirements.txt
